--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,10 @@ jobs:
         with:
           files: 'src/memorista-plugin.php'
           replacements: '1.0.0=$CI_ACTION_REF_NAME'
-      - uses: montudor/action-zip@v1
+      - uses: thedoctor0/zip-release@v0
         with:
-          args: zip -r memorista.zip src/*
+          filename: 'memorista.zip'
+          directory: 'src'
       - uses: softprops/action-gh-release@v1
         with:
           files: memorista.zip
