--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     types: [created]
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -14,7 +14,7 @@ jobs:
         with:
           files: 'src/memorista-plugin.php'
           replacements: '1.0.0=$CI_ACTION_REF_NAME'
-      - uses: thedoctor0/zip-release@v0
+      - uses: thedoctor0/zip-release@0.4.2
         with:
           filename: 'memorista.zip'
           directory: 'src'
