--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: datamonsters/replace-action@v2
         with:
           files: 'src/memorista-plugin.php'
-          replacements: '1.0.0=${{ CI_REF_NAME }}'
+          replacements: "1.0.0=$CI_REF_NAME"
       - uses: thedoctor0/zip-release@0.4.2
         with:
           filename: 'memorista.zip'
