--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: FranzDiebold/github-env-vars-action@v2
-      - uses: datamonsters/replace-action@v2
+      - uses: jacobtomlinson/gha-find-replace@0.1.4
         with:
-          files: 'src/memorista-plugin.php'
-          replacements: "1.0.0=$CI_REF_NAME"
+          include: 'src/memorista-plugin.php'
+          find: '1.0.0'
+          replace: $CI_ACTION_REF_NAME
       - uses: thedoctor0/zip-release@0.4.2
         with:
           filename: 'memorista.zip'
