--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           include: 'src/memorista-plugin.php'
           find: '1.0.0'
-          replace: $CI_ACTION_REF_NAME
+          replace: ${{ github.ref }}
       - uses: thedoctor0/zip-release@0.4.2
         with:
           filename: 'memorista.zip'
