--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: FranzDiebold/github-env-vars-action@v2.1.0
       - uses: jacobtomlinson/gha-find-replace@0.1.4
         with:
           include: 'src/memorista-plugin.php'
           find: '1.0.0'
-          replace: ${{ github.ref }}
+          replace: ${{ github.event.release.tag_name }}
       - uses: thedoctor0/zip-release@0.4.2
         with:
           filename: 'memorista.zip'
