--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     },
     "devDependencies": {
         "cpx": "1.5.0",
-        "nodejs-file-downloader": "4.7.4",
-        "prettier": "2.4.1"
+        "nodejs-file-downloader": "4.7.4"
     }
 }
