--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
     "main": "memorista-plugin.php",
     "scripts": {
         "start": "cpx -w src/**/* build/www/wp-content/plugins/memorista",
-        "prettier": "prettier src --write",
         "install": "node scripts/download-client-ui.js"
     },
     "devDependencies": {
-        "@prettier/plugin-php": "0.17.5",
         "cpx": "1.5.0",
-        "nodejs-file-downloader": "4.7.4",
-        "prettier": "2.4.1"
+        "nodejs-file-downloader": "4.7.4"
     }
 }
