--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
           cache: 'npm'
       - uses: jacobtomlinson/gha-find-replace@0.1.4
         with:
-          include: 'src/memorista-plugin.php'
+          include: 'src/memorista.php'
           find: '1.0.0'
           replace: ${{ github.event.release.tag_name }}
       - run: npm ci
