Added stable tag (#25)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,11 @@ jobs:
           include: 'src/memorista.php'
           find: '1.0.0'
           replace: ${{ github.event.release.tag_name }}
+      - uses: jacobtomlinson/gha-find-replace@0.1.4
+        with:
+          include: 'src/readme.txt'
+          find: '1.0.0'
+          replace: ${{ github.event.release.tag_name }}
       - run: npm ci
       - uses: thedoctor0/zip-release@0.4.2
         with:
