--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
           node-version: 14
           registry-url: https://registry.npmjs.org/
           cache: 'npm'
+
+      # Update version numbers
       - uses: jacobtomlinson/gha-find-replace@0.1.4
         with:
           include: 'src/memorista.php'
@@ -21,10 +23,12 @@ jobs:
           replace: ${{ github.event.release.tag_name }}
       - uses: jacobtomlinson/gha-find-replace@0.1.4
         with:
-          include: 'src/readme.txt'
+          include: '.wordpress-org/readme.txt'
           find: '1.0.0'
           replace: ${{ github.event.release.tag_name }}
       - run: npm ci
+
+      # Create plugin ZIP
       - uses: thedoctor0/zip-release@0.4.2
         with:
           filename: 'memorista.zip'
@@ -34,3 +38,13 @@ jobs:
           files: src/memorista.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Deploy to WordPress plugin directory
+      - run: mv .wordpress-org/readme.txt src/readme.txt
+      - uses: nk-o/action-wordpress-plugin-deploy@v0.0.5
+        env:
+          SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
+          SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
+          SOURCE_DIR: src
+          ASSETS_DIR: .wordpress-org/assets
+          SLUG: memorista
