hack in version number for this last release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,13 +23,13 @@ jobs:
         with:
           include: 'src/memorista.php'
           find: '1.0.0'
-          replace: ${{ github.event.release.tag_name }}
+          replace: '1.5.5'
       - name: Set current version number in .wordpress-org/readme.txt
         uses: jacobtomlinson/gha-find-replace@0.1.4
         with:
           include: '.wordpress-org/readme.txt'
           find: '1.0.0'
-          replace: ${{ github.event.release.tag_name }}
+          replace: '1.5.5'
       - name: Build plugin
         run: npm ci
 
